Swap Claude API for Google Gemini (free tier) in compensation summaries
Replaces ClaudeSummaryClient (Anthropic Java SDK) with GeminiSummaryClient
(plain Spring RestClient, no new dependency) so the AI incident-summary
feature can run on Gemini's free tier instead of Claude's pay-as-you-go
API -- same circuit-breaker/fallback architecture, same cache table, same
AI/DETERMINISTIC source field. Model pinned to gemini-3.1-flash-lite after
confirming gemini-2.0-flash and several newer models return 404/quota-0 on
a fresh free-tier project, while flash-lite works. Verified live end to
end against a real compensated payment ("source": "AI").

Co-Authored-By: Claude Sonnet 5 <noreply@anthropic.com>